--- a/app/src/main/res/layout/activity_pdfview.xml
+++ b/app/src/main/res/layout/activity_pdfview.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/activity_pdfview_scene"
     tools:context=".Pdfview">
 
     <Button
         android:id="@+id/bp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bidyong Panturo"
         android:onClick="watchVideo"
+        android:text="Bidyong Panturo"
         app:backgroundTint="#2196F3"
         app:layout_constraintBottom_toBottomOf="@+id/pdf_reader2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.github.barteksc.pdfviewer.PDFView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
         android:id="@+id/pdf_reader2"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     </com.github.barteksc.pdfviewer.PDFView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
