--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -164,4 +164,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ch4" />
 
+    <Button
+        android:id="@+id/resultBTN4"
+        android:layout_width="219dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="52dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Resulta"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:backgroundTint="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ch4" />
+
+    <ImageView
+        android:id="@+id/correctIMG"
+        android:layout_width="75dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submitBTN"
+        app:srcCompat="@drawable/image_correct" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
