--- a/app/src/main/res/layout/activity_quiz_type2.xml
+++ b/app/src/main/res/layout/activity_quiz_type2.xml
@@ -136,5 +136,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ch2" />
 
+    <Button
+        android:id="@+id/resultBTN6"
+        android:layout_width="219dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="76dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Resulta"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:backgroundTint="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ch2" />
+
+    <ImageView
+        android:id="@+id/correctIMG1"
+        android:layout_width="80dp"
+        android:layout_height="65dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submitBTN1"
+        app:srcCompat="@drawable/image_correct" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
