--- a/app/src/main/res/layout/activity_quiz_type3.xml
+++ b/app/src/main/res/layout/activity_quiz_type3.xml
@@ -62,7 +62,7 @@
         android:id="@+id/answerET"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
         android:fontFamily="sans-serif-medium"
@@ -74,20 +74,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/sv_border"
         android:fillViewport="true"
         android:scrollbarThumbVertical="@drawable/scroll_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/answerET">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -116,19 +116,19 @@
         android:id="@+id/submitBTN2"
         android:layout_width="219dp"
         android:layout_height="51dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-medium"
         android:text="Sagutan"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/correctAnswerTV" />
+        app:layout_constraintTop_toBottomOf="@+id/answerET" />
 
     <Button
         android:id="@+id/resultBTN"
         android:layout_width="219dp"
         android:layout_height="51dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-medium"
         android:text="Resulta"
         android:textSize="18sp"
@@ -136,13 +136,13 @@
         app:backgroundTint="#03A9F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/correctAnswerTV" />
+        app:layout_constraintTop_toBottomOf="@+id/answerET" />
 
     <TextView
         android:id="@+id/correctAnswerTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/holo_green_light"
         android:fontFamily="sans-serif-medium"
         android:padding="6dp"
@@ -153,6 +153,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/submitBTN2" />
+
+    <ImageView
+        android:id="@+id/correctIMG2"
+        android:layout_width="80dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="8dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/correctAnswerTV"
+        app:srcCompat="@drawable/image_correct" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
